--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,5 +32,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        SECRET_KEY: ${{env.SECRET_KEY}}
+        EXTENSIONS: ${{env.EXTENSIONS}}
+        SQLALCHEMY_TRACK_MODIFICATIONS: ${{env.SQLALCHEMY_TRACK_MODIFICATIONS}}
       run: |
         python -m pytest
